# NeurCross

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/doubleTorus/input/: doubleTorus.ply  doubleTorus_remesh.ply
models/: DiGS.py  UNet.py  loss_quad_mesh.py
neurcross/models/: __init__.py
neurcross/quad_mesh/: quad_mesh_args.py
quad_mesh/: quad_mesh_args.py  quad_mesh_dataset.py  train_quad_mesh.py
utils/: imgui.ini  utils.py
